docs: fix README typos and project name

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "picsellia-agents"
+name = "atlas"
 version = "0.1.0"
 description = "Picsellia Agents Microservice"
 readme = "README.md"
